# c2server

./: CMakeLists.txt  README.md  config.json  vcpkg.json
app/: CMakeLists.txt  main.cpp
cmake/: AddCustomCommandOrTest.cmake  Doxyfile.in  PlatformOptions.cmake  c2serverConfig.cmake.in  version.cppm.in
config/: config.json
docs/: mainpage.dox
examples/: CMakeLists.txt  hello_world.cpp  middleware_server.cpp  swagger_server.cpp
src/: CMakeLists.txt  acceptor.cpp  acceptor.cppm  config.cppm  error.cppm  exfil.cpp  exfil.cppm  http.cpp  http.cppm  logger.cpp  logger.cppm  payload.cpp  payload.cppm  router.cpp  router.cppm  server.cpp  server.cppm  server_detail.hpp  server_listener.cpp  server_runtime.cpp  server_session.cpp  server_shutdown.cpp  server_ssl.cpp  session.cpp  session.cppm
src/client/: client.cpp  client.cppm
src/config/: config.cpp  config.cppm
src/error/: error.cppm
src/http/: http.cpp  http.cppm
src/logger/: logger.cppm
src/middleware/: middleware.cpp  middleware.cppm
src/payload/: payload.cppm
src/router/: router.cpp  router.cppm
src/server/: server.cpp  server.cppm
src/server/detail/: server_detail.cppm  server_listener.cpp  server_runtime.cpp  server_session.cpp  server_shutdown.cpp
tests/: CMakeLists.txt  endpoint_tests.cpp  middleware_tests.cpp  server_tests.cpp  ssl_tests.cpp  ut_main.hpp
tests/assets/: localhost.crt  localhost.key
